...
    @Namespace private var barAnimation

    /// Espacio de nombres para animaciones de la flecha.
    @Namespace private var arrowAnimation

    /// Elementos de muestra para mostrar en la lista.
    let items = ["iPhone", "Samsung", "Pelota"]

    /// Colores disponibles para seleccionar.
    let colors: [Color] = [.red, .green, .blue, .yellow, .orange]

    /// Inicializador para configurar la vista.
    /// - Parameters:
...
                    }
                    .foregroundStyle(colorManager.textColor.opacity(0.6))
                    .font(.system(size: 30))
                    .matchedGeometryEffect(id: arrowAnimation, in: barAnimation)
                    .padding(.leading, 6)
                    .accessibilityLabel("Volver")
                    .accessibilityIdentifier("BackButton", isEnabled: showBackButton)
                } else {
                    Spacer()
                }
                
                Spacer()
                
                if showHeader {
                    TextField("", text: $searchText)
                        .placeholder(when: searchText.isEmpty) {
                            Text("Buscar...")
                                .foregroundStyle(colorManager.fontColot.opacity(0.5))
                                .accessibilityHidden(true)
                        }
                        .padding(6)
                        .background(colorManager.backgroundColor)
                        .cornerRadius(15)
...
                    if !showBackButton {
                        Button("", systemImage: "gearshape.fill") {
                            isColorPickerPresented.toggle()
                        }
                        .foregroundStyle(colorManager.textColor)
                        .font(.system(size: 20))
                        .accessibilityIdentifier("SetUpButton")
                        .accessibilityLabel("Botón de configuracion")
                        .accessibilityHint("Toca dos veces para abrir la configuracion")
                    }
                }
                
                Spacer()
...
                            Button("", systemImage: "square.grid.2x2") {
                                showInList = false
                            }
                            .fontWeight(.bold)
                            .foregroundStyle(showInList ? colorManager.textColor : colorManager.primaryColor)
                            .font(.system(size: 20))
                            .accessibilityIdentifier("GridButton")
                            .accessibilityLabel("Botón Para mostrar como grilla")
                            .accessibilityHint("Toca dos veces para usar la grilla como vista")
                            
                            Button("", systemImage: "list.bullet") {
                                showInList = true
                            }
                            .fontWeight(.bold )
                            .foregroundStyle(showInList ? colorManager.primaryColor : colorManager.textColor)
                            .font(.system(size: 20))
                            .accessibilityIdentifier("ListButton")
                            .accessibilityLabel("Botón Para mostrar como Lista")
                            .accessibilityHint("Toca dos veces para usar la Lista como vista")
                        }
                    }
                }
            }
...
                    }
                }
                .matchedGeometryEffect(id: searchBarAnimation, in: arrowAnimation)
                .foregroundStyle(colorManager.fontColot)
                .font(.system(size: 30))
                .padding(.leading, 30)
                .accessibilityIdentifier("BackListButton")
                .accessibilityLabel("Botón para volver")
                .accessibilityHint("Toca dos veces para salir de la busqueda")
                
                TextField("", text: $searchText)
                    .placeholder(when: searchText.isEmpty) {
                        Text("Buscar en Mercado Libre")
                            .foregroundStyle(colorManager.fontColot.opacity(0.5))
                            .accessibilityHidden(true)
                    }
                    .matchedGeometryEffect(id: searchBarAnimation, in: barAnimation)
                    .foregroundColor(colorManager.textColor)
                    .font(.system(size: 16))
...
                )
                .onTapGesture {
                    otherThemeTapped?()
                    isColorPickerPresented = false
                }
                .accessibilityElement(children: .combine)
                .accessibilityIdentifier("DeveloperButton")
                .accessibilityAddTraits(.isButton)
                .accessibilityLabel("Boton para acceder a el modo desarrollador")
                .accessibilityHint("Toca dos veces para acceder")
        }
    }
}
...
                            discountPercentage: 0.21051076952307757,
                            stock: 15,
                            installments: Installments(
                                value: "9 cuotas de 198487.20555555556",
                                alternative: "3639149146068879 cuotas sin tarjeta"
                            ),
                            shipping: "Llega Mañana",
                            images: [
                                "https://picsum.photos/seed/bNsG7iK/720/720",
                                "https://picsum.photos/seed/qhrEL/720/720?grayscale",
                                "https://picsum.photos/seed/vuLrrBdieN/720/720?grayscale",
                                "https://picsum.photos/seed/dyToMMlJVD/720/720",
                                "https://picsum.photos/seed/e02WFUHQ5M/720/720?grayscale",
...
