...
        }) {
            VStack {
                ScrollView {
                    VStack {
                        VStack(alignment: .leading, spacing: 15) {
                            HStack {
                                Text("Nuevo | +100 vendidos")
                                    .font(.system(size: 12))
                                    .foregroundStyle(colorManager.fontColot.opacity(0.8))
                                
                                Spacer()
                                
                                if let rating = product?.rating {
...
            if let alternative = product?.installments?.alternative {
                Text("o mismo precio en \(alternative)")
                    .foregroundStyle(colorManager.fontColot)
                    .font(.system(size: 14))
            }

            Text("Ver los medios de pago")
                .textStyle(.actionLabel)
                .padding(.vertical, 3)
            
            
            if let shipping = product?.shipping {
                Text(shipping)
                    .foregroundStyle(colorManager.callToActionColor)
                    .font(.system(size: 14))
                    .padding(.top, 15)
            }
            
            Text("Mas formas de entrega")
                .textStyle(.actionLabel)
                .padding(.vertical, 3)
            
            
            VStack(alignment: .leading) {
                Text("Retira gratis a partir del sabado en correos y otros puntos")
                    .foregroundStyle(colorManager.callToActionColor)
                    .font(.system(size: 14))
                    .padding(.top, 15)
                
                Text("Tienes un punto de entrega a 450m")
                    .foregroundStyle(colorManager.fontColot.opacity(0.4))
                    .font(.system(size: 12))
                    .padding(.vertical, 3)
                
                Text("Ver en el mapa")
                    .textStyle(.actionLabel)
            }
            
            Text("Stock disponible")
                .foregroundStyle(colorManager.fontColot)
                .font(.system(size: 14))
...
