...
        ViewWrapper(showHeader: false, showBackButton: true, buttonAction: {
            viewModel.goBack()
        }) {
            VStack {
                ScrollView {
                    VStack(alignment: .center, spacing: 20) {
                        Text("Configura tu app")
                            .font(.system(size: 24, weight: .bold))
                            .foregroundStyle(.black)
                        
                        phone
                        
                        HStack {
                            Text("Selecciona un tema")
                                .fontWeight(.medium)
                                .foregroundStyle(.black)
                            
                            Spacer()
                            
                            Picker("Selecciona un tema", selection: $theme) {
...
